# Very-Large-Scale-Integration

./: .gitignore  convert_instances.py  pyproject.toml  run_all_models.sh  solve_instances_minizinc.py  solve_instances_mip.py  solve_instances_sat.py  solve_instances_sat_milp.py  solve_instances_sat_milp_smt.py
CP_models/: board_channeling.mzn  sat_based_method_for_2dsp.mzn  sat_based_method_for_2dsp_rotation.mzn
config/: dzn_parnames.json
cp/: best_model.mzn  best_model_no_sb.mzn  best_model_rotation.mzn  best_model_rotation_no_sb.mzn  best_model_rotation_sb.mzn  best_model_rotation_sb_1.mzn  best_model_rotation_sb_2.mzn  best_model_sb.mzn  best_model_sb_1.mzn  best_model_sb_2.mzn  board_channeling.mzn  board_channeling_rotation.mzn
instances/dzn/: ins-1.dzn  ins-10.dzn  ins-11.dzn  ins-12.dzn  ins-13.dzn  ins-14.dzn  ins-15.dzn  ins-16.dzn  ins-17.dzn  ins-18.dzn  ins-19.dzn  ins-2.dzn  ins-20.dzn  ins-21.dzn  ins-22.dzn  ins-23.dzn  ins-24.dzn  ins-25.dzn  ins-26.dzn  ins-27.dzn  ins-28.dzn  ins-29.dzn  ins-3.dzn  ins-30.dzn  ins-31.dzn  ins-32.dzn  ins-33.dzn  ins-34.dzn  ins-35.dzn  (+11 more)
milp/: S1.py  SG.py  dgp_big_m_models.py  dgp_big_m_models_with_rotation.py  positioning_and_covering_models.py  s1_bm.py  s1_mbm.py
mip/: s1_mbm.py
old_sat_models/: sat_model.py
pc_ilp_model/: model.py  pulp_model.py  utils.py
positioning_covering_milp_models/: pulp_models.py
sat/: order_encoding.py  sat_model.py  sat_strip_packing_no_rotation.py  sat_strip_packing_rotation.py
sat_model/: order_encoding.py  vlsi_sat.py
smt/: model.py
utils/: heuristics.py  misc.py
(+838 files in other folders)
