[tool.poetry]
name = "vsli"
version = "0.1.0"
description = ""
authors = ["Giorgio Buzzanca <giorgio.buzzanca@studio.unibo.it>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"
click = "^8.1.3"
matplotlib = "^3.5.3"
z3-solver = "^4.11.1"
minizinc = "^0.7.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
